# bagitup

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yaml
src/bagitup/: __init__.py  __main__.py  _cmdargs.py  _exceptions.py  _interface.py  bagitup.py
